public/styles/style.css
/* ... */
.tabs {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 1rem;
    grid-gap: 0.25rem;
    border-bottom-width: 1px;
    --tw-border-opacity: 1;
    border-color: rgba(0, 0, 0, var(--tw-border-opacity));
  }
.tabs .tab-lifted {
    border: 1px solid;
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
    border-width: 1px 1px 0px 1px;
    padding-left: 1rem;
    padding-right: 1rem;
  }
.tabs .tab-lifted:hover {
	--tw-bg-opacity: 1;
	background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
}
.dark .tabs .tab-lifted:hover {
	--tw-bg-opacity: 1;
	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
}
.tabs .tab-active {
	--tw-bg-opacity: 1;
	background-color: rgba(240, 171, 252, var(--tw-bg-opacity));
}
.btn {
	transform: var(--tw-transform);
	border-radius: 0.25rem;
	padding: 0.5rem;
    -webkit-animation: button-pop var(--animation-btn, 0.25s) ease-out;
            animation: button-pop var(--animation-btn, 0.25s) ease-out;
}
.btn-primary {
	--tw-bg-opacity: 1;
	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
	--tw-text-opacity: 1;
	color: rgba(255, 255, 255, var(--tw-text-opacity));
}
.form-control {
	display: flex;
	flex-direction: column;
}
.label {
	display: flex;
}
.label-text {
	flex-grow: 1;
}
@-webkit-keyframes button-pop {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.1);
    }
    100% {
      transform: scale(1);
    }
  }
@keyframes button-pop {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.1);
    }
    100% {
      transform: scale(1);
    }
  }
#navbar {
    top: 0;
    transition: top 0.3s;
  }
.card.image-full > figure img {
	height: 12rem;
    -o-object-fit: cover;
    object-fit: cover;
}
@-webkit-keyframes toast-pop {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.1);
    }
    100% {
      transform: scale(1);
    }
  }
@keyframes toast-pop {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.1);
    }
    100% {
      transform: scale(1);
    }
  }
@-webkit-keyframes toast-fade {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
@keyframes toast-fade {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
.static {
	position: static;
}
.fixed {
	position: fixed;
}
.absolute {
	position: absolute;
}
.relative {
	position: relative;
}
.inset-0 {
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
}
.inset-x-0 {
	left: 0px;
	right: 0px;
}
.top-32 {
	top: 8rem;
}
.left-4 {
	left: 1rem;
}
.right-0 {
	right: 0px;
}
.top-0 {
	top: 0px;
}
.bottom-4 {
	bottom: 1rem;
}
.left-0 {
	left: 0px;
}
.bottom-0 {
	bottom: 0px;
}
.right-4 {
	right: 1rem;
}
.bottom-8 {
	bottom: 2rem;
}
.right-8 {
	right: 2rem;
}
.top-14 {
	top: 3.5rem;
}
.top-12 {
	top: 3rem;
}
.top-4 {
	top: 1rem;
}
.-left-3 {
	left: -0.75rem;
}
.top-1 {
	top: 0.25rem;
}
.right-1 {
	right: 0.25rem;
}
.bottom-0\.5 {
	bottom: 0.125rem;
}
.right-0\.5 {
	right: 0.125rem;
}
.left-1\/2 {
	left: 50%;
}
.z-20 {
	z-index: 20;
}
.z-50 {
	z-index: 50;
}
.z-40 {
	z-index: 40;
}
.z-10 {
	z-index: 10;
}
.col-span-3 {
	grid-column: span 3 / span 3;
}
.col-span-2 {
	grid-column: span 2 / span 2;
}
.col-span-4 {
	grid-column: span 4 / span 4;
}
.col-span-1 {
	grid-column: span 1 / span 1;
}
.m-1 {
	margin: 0.25rem;
}
.my-2 {
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}
.mx-2 {
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}
.mx-auto {
	margin-left: auto;
	margin-right: auto;
}
.mx-4 {
	margin-left: 1rem;
	margin-right: 1rem;
}
.my-1 {
	margin-top: 0.25rem;
	margin-bottom: 0.25rem;
}
.mx-1 {
	margin-left: 0.25rem;
	margin-right: 0.25rem;
}
.mx-10 {
	margin-left: 2.5rem;
	margin-right: 2.5rem;
}
.my-10 {
	margin-top: 2.5rem;
	margin-bottom: 2.5rem;
}
.my-20 {
	margin-top: 5rem;
	margin-bottom: 5rem;
}
.mb-1 {
	margin-bottom: 0.25rem;
}
.mt-2 {
	margin-top: 0.5rem;
}
.mb-2 {
	margin-bottom: 0.5rem;
}
.mt-3 {
	margin-top: 0.75rem;
}
.mr-2 {
	margin-right: 0.5rem;
}
.mb-4 {
	margin-bottom: 1rem;
}
.ml-2 {
	margin-left: 0.5rem;
}
.mt-4 {
	margin-top: 1rem;
}
.ml-1 {
	margin-left: 0.25rem;
}
.mt-20 {
	margin-top: 5rem;
}
.ml-4 {
	margin-left: 1rem;
}
.box-border {
	box-sizing: border-box;
}
.block {
	display: block;
}
.inline-block {
	display: inline-block;
}
.inline {
	display: inline;
}
.flex {
	display: flex;
}
.grid {
	display: grid;
}
.hidden {
	display: none;
}
.h-screen {
	height: 100vh;
}
.h-20 {
	height: 5rem;
}
.h-6 {
	height: 1.5rem;
}
.h-96 {
	height: 24rem;
}
.h-28 {
	height: 7rem;
}
.h-5 {
	height: 1.25rem;
}
.h-full {
	height: 100%;
}
.h-10 {
	height: 2.5rem;
}
.h-auto {
	height: auto;
}
.h-0\.5 {
	height: 0.125rem;
}
.h-0 {
	height: 0px;
}
.h-4 {
	height: 1rem;
}
.h-40 {
	height: 10rem;
}
.h-8 {
	height: 2rem;
}
.h-24 {
	height: 6rem;
}
.h-12 {
	height: 3rem;
}
.h-64 {
	height: 16rem;
}
.h-44 {
	height: 11rem;
}
.h-36 {
	height: 9rem;
}
.max-h-10 {
	max-height: 2.5rem;
}
.max-h-96 {
	max-height: 24rem;
}
.max-h-72 {
	max-height: 18rem;
}
.min-h-screen {
	min-height: 100vh;
}
.w-full {
	width: 100%;
}
.w-6 {
	width: 1.5rem;
}
.w-4 {
	width: 1rem;
}
.w-5 {
	width: 1.25rem;
}
.w-1\/3 {
	width: 33.333333%;
}
.w-11\/12 {
	width: 91.666667%;
}
.w-8 {
	width: 2rem;
}
.w-48 {
	width: 12rem;
}
.w-24 {
	width: 6rem;
}
.w-12 {
	width: 3rem;
}
.w-40 {
	width: 10rem;
}
.w-44 {
	width: 11rem;
}
.w-2\/3 {
	width: 66.666667%;
}
.max-w-screen-xl {
	max-width: 1280px;
}
.max-w-full {
	max-width: 100%;
}
.max-w-6xl {
	max-width: 72rem;
}
.max-w-md {
	max-width: 28rem;
}
.max-w-5xl {
	max-width: 64rem;
}
.max-w-4xl {
	max-width: 56rem;
}
.flex-initial {
	flex: 0 1 auto;
}
.flex-auto {
	flex: 1 1 auto;
}
.flex-1 {
	flex: 1 1 0%;
}
.flex-grow {
	flex-grow: 1;
}
.-translate-x-1\/2 {
	--tw-translate-x: -50%;
	transform: var(--tw-transform);
}
.-translate-y-1\/2 {
	--tw-translate-y: -50%;
	transform: var(--tw-transform);
}
.rotate-180 {
	--tw-rotate: 180deg;
	transform: var(--tw-transform);
}
/* ... */

